[package]
name = "angelmarkup"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Abraham <youreccentricity@outlook.com>"]
description= "Simple data storage with no drama."
homepage = "https://github.com/iamtheblackunicorn/angelmarkup"
repository = "https://github.com/iamtheblackunicorn/angelmarkup"
documentation = "https://github.com/iamtheblackunicorn/angelmarkup"
readme = "README.markdown"
keywords = ["command-line-utilities"]
categories = ["command-line-utilities"]
exclude = ["/.github", "sample"]

[dependencies]
regex = "1.5.5"
serde_json = "1.0.79"
